--- a/Computer Networks/计网复习.md
+++ b/Computer Networks/计网复习.md
@@ -1,4 +1,6 @@
-# 计网复习 2024.12
+# 计网复习
+
+计网复习 202412 2211030
 
 - 选择（10道题，20分） 
 - 填空（30空，30分）
@@ -40,13 +42,13 @@
 
 端对端原则：采用聪明终端&简单网络，由端系统负责丢失恢复等，简单的网络大大提升了可扩展性
 
-**计算机网络度量单位**
+**计算机网络度量单位（不考）**
 
 • 比特率 • 带宽 • 包转发率 • 时延 • 时延带宽积 • 吞吐量 • 丢包率 • 利用率 • 往返时间RTT • 时延抖动
 
 
 
-## 物理层
+## 物理层（不考）
 
 ### 基本概念
 
@@ -111,11 +113,11 @@
 
 **校验和(Checksum)：**主要用于TCP/IP体系中的网络层和传输层。发送方：进行16 位二进制补 码求和运算，计算结果取反， 随数据一同发送。
 
-**循环冗余校验(Cyclic Redundancy Check，CRC)：**数据链路层广泛使用的校验方法。![image-20241222210402273](C:\Users\Extinct\AppData\Roaming\Typora\typora-user-images\image-20241222210402273.png)
+**循环冗余校验(Cyclic Redundancy Check，CRC)：**数据链路层广泛使用的校验方法。![CRC](.\img\CRC.png)
 
 #### 典型纠错码-海明码
 
-![image-20241222210819931](C:\Users\Extinct\AppData\Roaming\Typora\typora-user-images\image-20241222210819931.png)
+![HammingCode](.\img\HammingCode.png)
 
 
 
@@ -144,7 +146,7 @@
 ### 滑动窗口协议
 
 - 窗口机制：发送方和接收方都具有一定容量的缓冲区（即窗口），发送端在收到确认之前可以发送多个帧
-- 累计确认：不必对收到的分组逐个发送确认，而是对按序到达的最后一个 分组发送确认
+- 累计确认：不必对收到的分组逐个发送确认，而是对按序到达的最后一个分组发送确认
 
 #### 回退N协议（回退1协议？）
 
@@ -200,16 +202,21 @@
 
 #### 有限竞争
 
-- ⾃适应树搜索协议（Adaptive Tree Walk Protocol ）
-
+- 自适应树搜索协议（Adaptive Tree Walk Protocol ）
 
 ### 以太网
 
-![image-20241223103057102](C:\Users\Extinct\AppData\Roaming\Typora\typora-user-images\image-20241223103057102.png)
+**不同以太网的带宽，记得看**
+
+**MAC帧格式**
+
+![MAC](.\img\MAC.png)
 
 
 
 ### 数据链路层交换
+
+三种操作：转发、过滤、泛洪
 
 MAC地址表的构建-逆向学习源地址：
 
@@ -250,7 +257,7 @@ Internet路由协议：OSPF、RIP、BGP
 
 #### IPv4
 
-![image-20241223105227402](C:\Users\Extinct\AppData\Roaming\Typora\typora-user-images\image-20241223105227402.png)
+![IPv4](.\img\IPv4.png)
 
 **数据包分片：**
 
@@ -270,6 +277,12 @@ IP报头错误导致无效传输，通过头部机校验解决：首部校验和
 网络号+主机号
 
 主机位全0，子网地址；主机位全1，广播地址
+
+**分类：**
+
+- A类：1.0.0.0~127. 255.255.255
+- B类：128.0.0.0~191.255.255.255
+- C类：192.0.0.0~223.255.255.255
 
 **无类域间路由 CIDR（Classless Inter-Domain Routing ）：**
 
@@ -309,57 +322,280 @@ NAT根据不同的IP上层协议进行NAT表项管理（TCP，UDP，ICMP）
 
 DHCP (Dynamic Host Configuration Protocol)：动态主机配置协议
 
-工作模式：客服/服务器模式（C/S ），基于UDP 工作，服务器运行在67 号端口，客户端运行在68 号端口
+工作模式：客服/服务器模式（C/S ），基于UDP 工作，服务器运行在67 号端口，客户端运行在68 号端口，==一直是广播==。
 
-p174
+- DHCP 客户从UDP端口68以广播形式向服务器发送发现报文（ DHCPDISCOVER） 
+- DHCP 服务器以广播形式发出提供报文（DHCPOFFER）
+- DHCP 客户从多个DHCP服务器中选择一个，并向其以广播形式发送 DHCP请求报文（DHCPREQUEST）
+- 被选择的DHCP服务器以广播形式发送确认报文（DHCPACK）
+
+![DHCP](.\img\DHCP.png)
 
 #### ICMP
 
+ICMP（Internet Control Message Protocol，互联网控制报文协议）主要用于在IP网络中传递控制信息和错误报告，携带在 IP 数据包中，IP上层协议号为1。
 
-
-
+- ICMP 差错报告报文 - 终点不可达：不可达主机、不可达网络，无效端口、协议
+- ICMP 询问报文 - 回送请求/回答(ping使用)
+- PING 使用了ICMP 回送请求与回送回答报文
+- Traceroute向目的地发送一系列UDP段，不断增大RTT
 
 ### 路由算法
 
+#### 优化原则
 
+**汇集树(Sink Tree)：**所有的源节点到一个指定目标节点的最优路径的集合构成一棵以目标节点为根的树，不一定唯一。
 
+#### 最短路径算法
 
+**Dijkstra算法：**基于贪心策略，逐步选择当前已知距离最近但尚未处理的节点，并通过这个节点更新其邻居的距离。
 
+算法维护两个集合：一个包含已经确定最短路径的节点（S），另一个包含尚未确定最短路径的节点（U）。每次迭代中，算法都会从未处理的节点集合U中选择具有最小临时距离的节点v加入集合S，并更新与v相邻的所有节点的距离。
 
+#### 距离向量路由
 
+**Bellman-Ford 方程**
 
+对于一个有向加权图 G*=(*V*,*E*)，其中 V* 是顶点集合，*E* 是边集合，假设我们有一个源节点 s*∈*V*。设 d*(*u*) 表示从源节点 *s* 到节点 *u* 的最短路径估计值，而 )*w*(*u*,*v*) 表示边 (*u*,*v*)∈*E* 的权重。那么，Bellman-Ford方程可以表示为：
+
+`d(v)=min⁡(d(v),d(u)+w(u,v))`
+
+这里 *u* 是 *v* 的所有前驱节点之一。换句话说，对于每一条边(*u*,*v*)，如果通过 *u* 到达 *v* 的路径比当前已知的最佳路径更短，则更新 *v* 的最短路径估计。
+
+**距离向量（Distance Vector）算法基本思想：** 
+
+- 每个节点周期性地向邻居发送它自己到某些节点的距离向量；
+- 当节点𝑥接收到来自邻居的新DV估计，它使用B-F方程更新其自己的距离向量
+
+**距离向量算法特点：**迭代的、分布式的
+
+- 每次本地迭代由下列引起：本地链路费用改变、邻居更新报文
+- 分布式：各节点依次计算，相互依赖
+
+**距离向量路由（p187）**
+
+- 路由器启动时初始化自己的路由表，包含所有直接相连的网络路径，距离均为0
+- 路由器周期性地向其相邻路由器广播自己知道的路由信息，相邻路由器可以根据收到的路由信息修改和刷新自己的路由表
+- 路由器经过若干次更新后，最终都会知道到达所有网络的最短距离，所有的路由器都得到正确的路由选择信息时网络进入“收敛”（convergence）状态
+
+**计数到无穷问题**
+
+- 好消息传播快，坏消息传播慢，是距离向量路由的一个主要缺点
+- 需要多次迭代直到计数到16才能发现不可达
+
+#### 链路状态路由
+
+思路就是每个节点收集信息，各自构造图，计算最短路径
+
+1. 发现邻居，了解他们的网络地址
+2. 设置到每个邻居的成本度量（通过某种标准/算法衡量）
+3. 构造**链路状态分组**（link state packet，LSP），分组中包含刚收到的所有信息（包含发送方标识、序列号、年龄、邻居列表）
+4. 将LSP分组发送给其他的路由器
+5. 计算到其他路由器的最短路径（通过Dijkstra算法）==要会画图P200==
+
+**与距离向量路由的比较**
+
+- 网络状态信息交换的范围：DV:邻居间交换；LS:全网扩散
+- 网络状态信息的可靠性：DV:部分道听途说；LS:自己测量
+- 健壮性：DV:计算结果传递，健壮性差；LS: 各自计算，健壮性好
+- 收敛速度：DV:  慢，可能有计数到无穷问题；LS:  快
 
 ### Internet路由协议
 
+==OSPF基于链路状态路由的原理，RIP基于距离向量路由的原理==
+
+#### OSPF
+
+OSPF（Open Shortest Path First）开放最短路径优先协议
+
+- 向本自治系统中所有路由器洪泛信息
+- 发送的信息就是与本路由器相邻的所有路由器的链路状态
+- 只有==当链路状态发生变化时==路由器才用洪泛法发送此信息
+
+OSPF支持将一组网段组合在一起，称为一个**区域**。使用层次结构的区域划分，上层的区域叫做主干区域，其他区域都必须与主干区域相连，非主干区域之间不允许直接发布区域间路由信息。路由器分为内部路由器、区域边界路由器、自治系统边界路由器。
+
+#### RIP
+
+路由选择协议RIP（Routing Information Protocol）是基于距离矢量算法的协议
+
+- 使用跳数衡量到达目的网络的距离，认为一个好的路由就是它通过的路由器的数目少，即“距离短”
+- 仅和相邻路由器交换信息，交换的内容是自己的路由表
+- 周期性更新：30s
+
+#### BGP
+
+边界网关协议BGP (Border Gateway Protocol) ，是目前互联网中唯一实际运行的自治域间的路由协议，分为==eBGP（从相邻的AS获得网络可达信息）和iBGP（将网络可达信息传播给AS内的路由器）==，基于网络可达信息和策略决定到其他网络的“最优”路由。
+
+- BGP会话：两个BGP路由器通过TCP连接交换BGP报文，通告到不同网络前缀的路径，即路径向量协议
+- 路径通告原理，P212
 
 
 
 
 
+## 传输层
 
-### 路由器工作原理
+网络层：主机到主机；传输层：进程到进程
+
+套接字标识与端口号：端口号是套接字标识的一部分，端口号是一个16比特的数
+
+### UDP
+
+UDP套接字使用<IP地址, 端口号>二元组进行标识
+
+<目的IP地址，目的端口号> 相同的UDP报文段被交付给同一个套 接字，与<源IP地址，源端口号> 无关
+
+报文段中的<源IP地址，源端口号> 被接收进程用来发送响应报文
+
+**UDP报头与校验和**
+
+![UDP](.\img\UDP.png)
+
+这个UDP的结构也要记一下
+
+报文长度：包含首部和数据部分，不算伪头长度
+
+UDP的协议号：17
 
 
 
+### TCP
+
+**监听套接字：**
+
+- 服务器平时在监听套接字上等待客户的连接请求，该套接字具有众所周知的端口号
+
+**连接套接字：**
+
+- 服务器在收到客户的连接请求后，创建一个连接套接字，使用临时分配的端口号
+- 服务器同时创建一个新的进程，在该连接套接字上服务该客户；每个连接套接字只与唯一一个客户通信
+- 连接套接字需要使用<源IP地址，目的IP地址，源端口号，目的端口号>四元组进行标 识，服务器使用该四元组将TCP报文段交付到正确的连接套接字
+
+#### 报文段结构
+
+![TCP](.\img\TCP.png)
+
+#### 可靠数据传输
+
+**发送方：**
+
+- 收到应用数据：
+  - 创建并发送TCP报文段
+  - 若当前没有定时器在运行（没有已发送、未确认的报文段），启动定时器
+- 超时：
+  - 重传包含最小序号的、未确认的报文段（仅对最早未确认的报文段使用一个重传定时器）
+  - 重启定时器
+- 收到ACK：
+  - 如果确认序号大于基序号（已发送未确认的最小序号）：
+    - 推进发送窗口（更新基序号），如果发送窗口中还有未确认的报文段，启动定时器，否则终止定时器
+
+只使用一个定时器，避免了超时设置过小时重发大量报文段；利用流水式发送和累积确认，可以避免重发某些丢失了ACK的报文段
+
+**接收方：**
+
+- 收到期待的报文段：发送更新的确认序号
+- 其它情况：重复当前的确认序号
+
+为减小通信量，TCP允许接收端推迟确认：接收端可以在收到若干个报文段后，发送一个累积确认的报文段（推迟确认的时间最多为500ms；接收方至少每隔一个报文段使用正常方式进行确认）
+
+| 接收端事件                                                  | 接收端动作                                                   |
+| ----------------------------------------------------------- | :----------------------------------------------------------- |
+| 收到一个期待的报文段，且之前的 报文段均已发送过确认         | 推迟发送确认，在500ms时间内若无下 一个报文段到来，发送确认   |
+| 收到一个期待的报文段，且前一个 报文段被推迟确认             | 立即发送确认（估计RTT的需要）                                |
+| 收到一个失序的报文段（序号大于 期待的序号），检测到序号间隙 | 立即发送确认（快速重传的需要），重 复当前的确认序号          |
+| 收到部分或全部填充间隙的报文段                              | 若报文段始于间隙的低端，立即发送确 认（推进发送窗口），更新确认序号 |
+
+**快速重传**
+
+- 原理：发送方可利用重复ACK检测报文段丢失
+- 发送方通常连续发送许多报文段，若仅有个别报文段丢失，发送方将收到多个重复序号的ACK
+- TCP协议规定：当发送方收到对同一序号的3次重复确认时，立即重发包含该序号的报文段
+
+#### 流量控制
+
+接收端有一个接收缓存，TCP将收到的数据放入接收缓存，应用进程从接收缓存中读数据；发送端TCP通过调节发送速率，不使接收端缓存溢出而实现流量控制
+
+**为什么回退N、选择重传和UDP不需要流量控制：**
+
+- 回退N协议和选择重传协议均假设正确、按序到达的分组被立即交付给上层 ，其占用的缓冲区被立即释放； 发送方根据确认序号即可知道哪些分组已被移出接收窗口，接收窗口还可以接受多少分组（再回去看看，掌握三个方案的区别和优缺点）
+- UDP不保证交付：接收端UDP将收到的报文载荷放入接收缓存，当应用进程消费数据不够快时，接收缓存溢出，报文数据丢失，UDP不负责任
+
+**非零窗口通告**
+
+- 发送方收到“零窗口通告”后，可以发送“零窗口探测”报文段
+- 发送端收到零窗口通告时，启动一个坚持定时器；定时器超时后，发送端发送一个零窗口探测报文段（序号为上一 个段中最后一个字节的序号）
+- 从而接收方可以发送包含接收窗口的响应报文段
+- 若发送端仍收到零窗口通告，重新启动坚持定时器
+
+**糊涂窗口综合症**
+
+**接收方启发式策略**
+
+- 通告零窗口之后，仅当窗口大小显著增加之后才发送更新的窗口通告
+- 什么是显著增加：窗口大小达到缓存空间的一半或者一个MSS，取两者的较小值
+- 当窗口大小不满足以上策略时，推迟发送确认（但最多推迟500ms，且至少每隔一个报文段使用正常方式进行确认），寄希望于推迟间隔内有更多数据被消费
+
+**发送方启发式策略，基于Nagle算法**
+
+- 在新建连接上，当应用数据到来时，组成一个TCP段发送（哪怕只有一个字节）
+- 在收到确认之前，后续到来的数据放在发送缓存中
+- 当数据量达到一个MSS或上一次传输的确认到来（取两者的较小时间），用一个TCP段将缓存的字节全部发走
+
+**小结**
+
+TCP接收端：
+
+- 使用显式的窗口通告，告知发送方可用的缓存空间大小
+- 在接收窗口较小时，推迟发送确认
+- 仅当接收窗口显著增加时，通告新的窗口大小
+
+TCP发送端：
+
+- 使用Nagle算法确定发送时机
+- 使用接收窗口限制发送的数据量，已发送未确认的字节数不超过接收窗口的大小
+
+#### 连接管理
+
+![TCP_Connect](.\img\TCP_Connect.png)
+
+- 客户TCP发送SYN报文段（SYN=1, ACK=0），==给出客户选择的起始序号==，不包含数据
+- 服务器TCP发送SYNACK报文段（SYN=ACK=1）（服务器端分配缓存和变量），==给出服务器选择的起始序号==，确认客户的起始序号，不包含数据
+- 客户发送ACK报文段（SYN=0，ACK=1）（客户端分配缓存和变量），确认服务器的起始序号，可能包含数据
+
+![TCP_Disconnect](.\img\TCP_Disconnect.png)
+
+中止时要等待2MSL（Maximum Segment Lifetime）的原因：如果最后一个ACK服务端没有收到，服务端会重发FIN，这时会要求客户端重传ACK。
 
 
 
+#### 拥塞控制
 
+发送方利用丢包事件（重传定时器超时或发送端收到3个重复的ACK）感知拥塞
 
+**拥塞窗口的调节策略：AIMD**
 
+- 乘性减（Multiplicative Decrease）：发送方检测到丢包后，将cwnd的大小减半（但不能小于一个MSS）
+- 加性增（Additive Increase）：若无丢包，每经过一个RTT，将cwnd增大 一个MSS，直到检测到丢包
 
+**慢启动**
 
+- 每收到一个ACK段，cwnd增加一个MSS，相当于每经过一个RTT，将cwnd加倍
+- 只要发送窗口允许，发送端可以立即发送下一个报文段
+- 在早期的TCP实现中，当一个连接建立后，发送方会立即按照接收窗口的大小尽可能多地发送数据，因此这个策略显得启动较慢
 
+**区分不同的丢包事件**
 
+- 收到3个重复的ACK：
+  - 设置ssthresh (slow start  threshold) =cwnd/2
+  - 将cwnd降至ssthresh+3
+  - 使用AIMD调节cwnd
+- 超时：
+  - 设置ssthresh =cwnd/2
+  - cwnd=1MSS
+  - 使用慢启动增大cwnd至ssthresh
+  - 使用AIMD调节cwnd
 
-
-
-
-
-
-
-
-
+![TCP_Disconnect](.\img\TCP_Disconnect.png)
 
 
 
