--- a/Computer Networks/计网复习.md
+++ b/Computer Networks/计网复习.md
@@ -50,7 +50,25 @@
 - 传输层
 - 应用层
 
-**计算机网络度量单位（不考）**
+### 比较
+
+**7层模型与4层模型**
+
+- TCP/IP模型的网络接口层定义主机与传输线路之间的接口，描述了链路为无连接的互联网层必须提供的基本功能
+- TCP/IP模型的互联网层、传输层与OSI模型的网络层、传输层大致对应
+- TCP/IP模型的应用层包含了OSI模型的表示层与会话层
+
+**基本设计思想：通用性与实用性**
+
+- OSI：先有模型后设计协议，不局限于特定协议，明确了服务、协议、接口等概念，更具通用性
+- TCP/IP模型：仅仅是对已有协议的描述
+
+**无连接与面向连接**
+
+- OSI模型网络层能够支持无连接和面向连接通信
+- TCP/IP模型的网络层仅支持无连接通信（IP）
+
+**计算机网络度量单位**
 
 • 比特率 • 带宽 • 包转发率 • 时延 • 时延带宽积 • 吞吐量 • 丢包率 • 利用率 • 往返时间RTT • 时延抖动
 
@@ -463,7 +481,7 @@ UDP套接字使用<IP地址, 端口号>二元组进行标识
 
 报文段中的<源IP地址，源端口号> 被接收进程用来发送响应报文
 
-**UDP报头与校验和**
+#### 报头与校验和
 
 ![UDP](.\img\UDP.png)
 
@@ -472,6 +490,43 @@ UDP套接字使用<IP地址, 端口号>二元组进行标识
 报文长度：包含首部和数据部分，不算伪头长度
 
 UDP的协议号：17
+
+#### Socket编程
+
+服务端：
+
+```python
+import socket
+
+server_socket = socket.socket(socket.AF_INET, socket.SOCK_DGRAM)
+server_socket.bind(('localhost', 10001))
+
+while True:
+    data, addr = server_socket.recvfrom(1024)  # 接收数据和客户端地址
+    message = data.decode('utf-8')
+    print(f'收到消息: {message} 来自 {addr}')
+    
+    if message:
+        response = f'Welcome {addr[0]}'
+        print(f'发送回复: {response}')
+        server_socket.sendto(response.encode('utf-8'), addr)
+```
+
+客户端：
+
+```python
+import socket
+
+client_socket = socket.socket(socket.AF_INET, socket.SOCK_DGRAM)
+message = 'hello'  # 请替换为实际的姓名和学号
+
+with client_socket:
+    sent = client_socket.sendto(message.encode('utf-8'), ('localhost', 10001))
+    data, addr = client_socket.recvfrom(1024)
+    response = data.decode('utf-8')
+    print(f'收到回复: {response}')
+    client_socket.close()
+```
 
 
 
@@ -621,6 +676,45 @@ TCP发送端：
 
 ![TCP_Congestion_Control](.\img\TCP_Congestion_Control.png)
 
+#### Socket编程
+
+服务端：
+
+```python
+import socket
+
+server_socket = socket.socket(socket.AF_INET, socket.SOCK_STREAM)
+server_socket.bind(('localhost', 10000))
+server_socket.listen(1)
+
+while True:
+    # 当有客户端连接时，accept()方法会返回一个新的套接字对象client_socket和客户端的地址 addr
+    client_socket, addr = server_socket.accept()
+    with client_socket:
+        print(f'连接来自 {addr}')
+        data = client_socket.recv(1024).decode('utf-8')
+        client_socket.sendall(f'Welcome {addr[0]}'.encode('utf-8'))
+        client_socket.close()
+```
+
+客户端：
+
+```python
+import socket
+
+client_socket = socket.socket(socket.AF_INET, socket.SOCK_STREAM)
+
+with client_socket:
+    client_socket.connect(('localhost', 10000))
+    message = '你的姓名 学号'  # 请替换为实际的姓名和学号
+    client_socket.sendall(message.encode('utf-8'))
+    response = client_socket.recv(1024).decode('utf-8')
+    print(f'收到回复: {response}')
+    client_socket.close()
+```
+
+
+
 
 
 
@@ -632,6 +726,8 @@ TCP发送端：
 - 客户/服务器（C/S,Client/Server）方式
 - 浏览器/服务器（B/S，Browser/Server）方式
 - 对等（P2P，Peer to Peer）方式
+
+服务器的工作方式分为：==循环方式、并发方式==
 
 ### 域名系统
 
