--- a/Parallel/并行复习.md
+++ b/Parallel/并行复习.md
@@ -9,9 +9,11 @@
 - 简答（14）
 - 按要求写相应代码（30）
 
+
+
 ## 绪论
 
-*推动并行计算的原因、了解并行计算应用、 超算、并行计算软件技术面临的挑战*
+*推动并行计算的原因、了解并行计算应用、超算、并行计算软件技术面临的挑战*
 
 **推动并行计算的原因**
 
@@ -38,23 +40,32 @@
 
 
 
+
+
 ## 并行硬件和并行软件
 
 *Cache相关工作原理及概念、并行多线程相关概念、Flynn分类法相关概念、SIMD、MIMD(共享内存\分布式内存、网络连接、等分宽度等)、并行算法设计(竞争条件\数据依赖\同步)、并行算法性能分析(加速比\效率\可扩展性\阿姆达尔定律)*
 
 ### Cache相关
 
-局部性原理
+局部性原理（时间局部性、空间局部性）
 
 一次内存访问能存取一整块代码和数据， 而不只是单条指令或单个数据。这些块称为高速缓存块或高速缓存行。
 
+写直达与写回（标记为脏）
+
+Cache映射：直接映射、全相连、n路组相连
+
+
+
 ### 并行多线程相关
 
-指令级并行(ILP)：通过让多个处理器或者功能单元同时执行指令来提高处理器的性能。
+**指令级并行(ILP)：**通过让多个处理器或者功能单元同时执行指令来提高处理器的性能。
 
-流水线：将功能单元分阶段安排
+- 流水线：将功能单元分阶段安排
 
-多发射：让多条指令同时启动
+- 多发射：让多条指令同时启动
+
 
 超标量：在预测技术中，编译器或者处理器对一条指令进行猜测，然后在猜测的基础上执行代码。
 
@@ -62,37 +73,50 @@
 
 粗粒度：只切换那些需要等待较长时间才能完成操作而被阻塞的线程
 
+
+
 ### Flynn分类法
 
 **SIMD 单指令多数据流** (Single instruction stream Multiple data stream)
 
-- 通过将数据分配给多个处理器实现并行化，使用相同的指令来操作数据子集，这种并行称为数据并行
-- 向量处理器：对数组或者数据向量进行操作，而传统地CPU是对单独的数据元素或者标量进行操作
+- 通过将数据分配给多个处理器实现并行化，使用相同的指令来操作数据子集，这种并行称为==数据并行==
+- ==向量处理器==：对数组或者数据向量进行操作，而传统地CPU是对单独的数据元素或者标量进行操作
 - GPU、AVX/SSE指令集、Unity和Unreal引擎、OpenCV库
 
 **MIMD 多指令多数据流** (Multiple instruction stream Multiple data stream)
 
-*共享内存\分布式内存\网络连接等*
+*共享内存\分布式内存\网络连接\等分宽度等*
 
 - 支持同时多个指令流在多个数据流上操作
 - 通常包括一组完全独立的处理单元或者核，每个处理单元或者核都有自己的控制单元和ALU
 - Web服务器、分布式计算集群（Hadoop、Spark）、多核中央处理器（Intel Xeon、AMD EPYC）
 
-**共享内存系统：**
+**共享内存系统**
 
-一组自治的处理器通过互连网络与内存系统相互连接，每个处理器能够访问每个内存区域，处理器通过访问共享的数据结构来隐式地通信（一致内存访问系统、非一致内存访问系统两张图）
+一组自治的处理器通过互连网络与内存系统相互连接，==每个处理器能够访问每个内存区域==，处理器通过访问共享的数据结构来隐式地通信
 
-**分布式内存（p73）：**
+**分布式内存（p73）**
 
+集群，==每⼀个CPU单独对应⼀个内存空间==，构成一节点，节点之间通过一个互联网络相互连接
 
+**互联网络**
 
-**等分宽度/带宽：**
+在分布式内存系统和共享内存系统中都扮演了一个决定性的角色，分为两类：
+
+- 共享内存互联网络
+- 分布式内存互联网络
+
+**等分宽度/带宽**
 
 - 找到一种方式将网络划分为两个相等的部分（或尽可能接近相等），这通常涉及到切断最少数量的链路
 - 计算在这次划分中被切断的链路总数，为==等分宽度==
 - 将被切断的链路数目乘以单条链路的带宽，得到总的==等分带宽==
 
-**Cache一致性，基于目录**
+**Cache一致性**
+
+- 监听Cache一致性协议（通过总线传递非法信号）
+
+- 基于目录的Cache一致性协议（使用目录维护内存行是否非法的状态）
 
 
 
@@ -112,11 +136,13 @@
 
 *加速比\效率\可扩展性\阿姆达尔定律*
 
-- **加速比 S**  = 最优串行算法时间/并行算法时间
+- **加速比 S**  = ==最优==串行算法时间/并行算法时间
 - 并行算法运行于p个处理器，S=p, 则称该并行算法具有线性加速比； S>p (超线性加速比)在实践中是可能出现的
-- **阿姆达尔定律(Amdahl’s law)：**S = 1 / (1 - a + a / p) ，a为串行程序中可被(完美)并行化的比例
+- **阿姆达尔定律(Amdahl’s law)：**S = 1 / (1 - a + a / p) ，a为串行程序中可被(完美)并行化的比例，极限为 S = 1 / (1 - a)
 - 效率 E = S / p
 - **可扩展性：**增加程序核数(线程数/进程数)，如果在输入规模也以相应增长率增加的情况下，该程序的效率一直是E(不降)，则称该程序是可扩展的。
+
+
 
 
 
@@ -140,9 +166,10 @@
 
 未对齐的内存访问，浮点数一个占4字节，地址不是16字节的整数倍
 
-静态对齐：对未对齐的读操作，做两次相邻的对齐读操作，然后进行合并
+- 静态对齐：对未对齐的读操作，做两次（或多次）相邻的对齐读操作，然后进行合并，或者特殊处理未对齐的部分，剩余部分对齐
 
-动态对齐：合并点在运行时计算
+- 动态对齐：合并点在运行时计算
+
 
 ```c++
 // 未对齐
@@ -190,6 +217,8 @@ for (i=0; i<16; i+=4){
 ```
 
 改进：假定所有控制流路径执行频率都不同，应该针对频率最高的路径优化代码，其他路径按默认方式执行。
+
+
 
 ### SSE编程
 
@@ -250,6 +279,7 @@ void trans_mul(int n, float a[][maxN], float b[][maxN], float c[][maxN]){
 
 **SSE 矩阵乘法**：
 
+- 使用`__m128 t1, t2, sum;` 定义三个SSE类型的变量，这些变量是用来存储128位宽的数据，可以同时处理四个单精度浮点数（每个32位）。
 - 初始化结果矩阵 `c` 的每个元素为 0.0。
 - 使用 `_mm_setzero_ps()` 初始化一个 `__m128` 类型的向量 `sum`，用于累积乘法结果。
 - 使用 `_mm_loadu_ps()` 从内存中加载 4 个浮点数到 `__m128` 向量 `t1` 和 `t2` 中。
@@ -325,6 +355,8 @@ void sse_mul(int n, float a[][maxN], float b[][maxN], float c[][maxN]) {
 - 负载均衡（处理器的工作量相近）
 - 协调和同步（谁负责？处理频率？）
 
+
+
 ### API
 
 ```c
@@ -348,26 +380,29 @@ int pthread_join(  pthread_t pthread, /*in*/
 ```
 
 - value_ptr 允许目标线程退出时返回信息给调用线程，无返回值则通常是NULL 
-- 返回值void\* 是个void指针，这里得是void的二重指针，是 指向void\*的指针
+- 返回值void\* 是个void指针，这里的是void的二重指针，是 指向void\*的指针
 - pthread_join若成功，返回0；若出错，返回非0出错编号
 
 ```c
-void pthread_exit(void *value_ptr);// 
-int pthread_cancel(pthread_t thread);// 取消线程thread执行
-int pthread_testcancel();// 检测线程是否取消状态
+void pthread_exit(void *value_ptr);// 子线程结束自己，不需要句柄
+int pthread_cancel(pthread_t thread);// 主线程使用，取消线程thread执行
+void pthread_testcancel();// 子线程使用，检测线程是否取消状态，如果是则取消
 ```
+
+
 
 ### 同步
 
-**临界区**是一个更新共享资源的代码段，一次只能允许一个线程执行该代码段
-
-执行结果依赖于两个或更多事件的**时序**，则存在**竞争条件**
-
-**数据依赖**就是两个内存操作的序，为了保证结果的正确性，必须保持这个序
-
-**同步**在时间上强制使各执行进程/线程在某一点必须互相等待，确保各进程/线程的正常顺序和对共享可写数据的正确访问
+- **原子性**：一组操作要么全部执行要么全不执行，则称其是原子的，即不会得到部分执行的结果
+- **互斥**：任何时候都只有一个线程在执行
+- **临界区**：一个更新共享资源的代码段，一次只能允许一个线程执行该代码段
+- **竞争条件**：执行结果依赖于两个或更多事件的时序
+- **数据依赖**：两个内存操作的序，为了保证结果的正确性，必须保持这个序
+- **同步**：在时间上强制使各执行进程/线程在某一点必须互相等待，确保各进程/线程的正常顺序和对共享可写数据的正确访问
 
 #### 忙等待
+
+flag指出的线程编号才允许累加到全局和，==顺序固定==，存在很多等待、CPU资源浪费。为避免过多忙等待，可让线程先各自求局部和
 
 ```c
 // flag指出的线程编号才允许累加到全局和，顺序固定
@@ -377,6 +412,8 @@ flag++;
 ```
 
 #### 互斥量
+
+忙等待与互斥量区别：进入临界区执行的线程顺序不同，前者指定顺序，后者顺序随机，指定顺序会造成资源浪费，先到的未必先执行；前者等待的线程也在空耗CPU计算资源，后者未进入临界区的线程会阻塞，释放CPU资源。
 
 ```c
 #include <pthread.h>
@@ -405,7 +442,7 @@ pthread_mutex_unlock(&mutex);
 
 ```c
 // 初始化信号量
-#include <semaphore.h>
+#include <semaphore.h> // 不在pthread标准库内
 int sem_init(sem_t *sem, int pshared, unsigned value);
 // pshared 通常置0（非0进程间共享，0则进程内线程共享）
 // value：信号量初始值
@@ -416,13 +453,71 @@ int sem_post(sem_t *sem); // +1，若原来为0则唤醒阻塞线程
 int sem_destroy(sem_t *sem);
 ```
 
-使用例：p29
+使用例：
+
+```c
+#include <stdio.h>
+#include <stdlib.h>
+#include <pthread.h>
+#include <semaphore.h>
+#define NUM_THREADS 4
+typedef struct{
+    int threadId;
+} threadParm_t;
+sem_t sem_parent;
+sem_t sem_children;
+
+void *threadFunc(void *parm)
+{
+    threadParm_t *p = (threadParm_t *) parm; 
+    fprintf(stdout, "I am the child thread %d.\n", p->threadId);
+    sem_post(&sem_parent); // 唤醒主线程-我已完成
+    sem_wait(&sem_children); // 等待主线程唤醒我
+    fprintf(stdout, "Thread %d is going to exit.\n", p->threadId);
+    pthread_exit(NULL);
+}
+
+int main(int argc, char *argv[])
+{
+    sem_init(&sem_parent, 0, 0);
+    sem_init(&sem_children, 0, 0);
+    pthread_t thread[NUM_THREADS];
+    threadParm_t threadParm[NUM_THREADS]; //传递参数
+    int i;
+    
+    for (i=0; i<NUM_THREADS; i++)
+    {
+        threadParm[i].threadId = i;
+        pthread_create(&thread[i], NULL, threadFunc, (void*)&threadParm[i]); // 派生子线程
+    }
+    
+    for (i=0; i<NUM_THREADS; i++)
+    {
+        sem_wait(&sem_parent); // 等待所有子线程都输出
+    }
+    
+    fprintf(stdout, "All the child threads has printed.\n");
+    
+    for (i=0; i<NUM_THREADS; i++)
+    {
+        sem_post(&sem_children); // 唤醒子线程继续输出新内容
+    }
+    
+    for (i=0; i<NUM_THREADS; i++)
+    {
+        pthread_join(thread[i], NULL);
+    }
+    sem_destroy(&sem_parent);
+    sem_destroy(&sem_children);
+    return 0;
+}    
+```
 
 #### 障碍
 
 ```c
 // 初始化barrier的两种方法
-pthread_barrier_t barrie=PTHREAD_BARRIER_INITIALIZER(unsigned  count);
+pthread_barrier_t barrier=PTHREAD_BARRIER_INITIALIZER(unsigned  count);
 int pthread_barrier_init(pthread_barrier_t *restrict barrier, 
 const pthread_barrierattr_t *restrict attr, unsigned count);
 // 第二个参数指出对象属性，NULL表示默认属性
@@ -432,7 +527,52 @@ int pthread_barrier_wait(pthread_barrier_t *barrier);
 int pthread_barrier_destroy(pthread_barrier_t *barrier);
 ```
 
-使用例：p35
+使用例：
+
+```c
+#include <stdio.h>
+#include <stdlib.h>
+#include <pthread.h>
+#define NUM_THREADS 4
+
+typedef struct{
+    int threadId;
+}threadParm_t;
+
+pthread_barrier_t barrier;
+
+void *threadFunc(void *parm)
+{
+    threadParm_t *p = (threadParm_t *) parm;
+    fprintf(stdout, "Thread %d has entered step 1.\n", p->threadId);
+    pthread_barrier_wait(&barrier);
+    fprintf(stdout, "Thread %d has entered step 2.\n", p->threadId);
+    pthread_exit(NULL);
+}
+
+int main(int argc, char *argv[])
+{
+    pthread_barrier_init(&barrier, NULL, NUM_THREADS);
+    pthread_t thread[NUM_THREADS];
+    threadParm_t threadParm[NUM_THREADS];
+    int i;
+    
+    for (i=0; i<NUM_THREADS; i++)
+    {
+        threadParm[i].threadId = i;
+        pthread_create(&thread[i], NULL, threadFunc, (void*)&threadParm[i]);
+    }
+    
+    for (i=0; i<NUM_THREADS; i++)
+    {
+        pthread_join(thread[i], NULL);
+    }
+    
+    pthread_barrier_destroy(&barrier);
+    system("PAUSE");
+    return 0;
+}
+```
 
 
 
@@ -458,7 +598,11 @@ int omp_get_thread_num(void);
 
 // 用临界区限制每个时刻限制只有一个线程执行
 # pragma omp critical
+// 保证单个操作的原子性
+# pragma omp atomic
 ```
+
+
 
 ### 归约
 
@@ -470,18 +614,32 @@ for (i=0; i < 100; i++)     {
 }
 ```
 
+
+
 ### 并行循环
 
-要求迭代次数可预测
+循环变量：带符号整数 ；终止检测：<, <=, >, >=与循环不变量；每步迭代递增/递减一个循环不变量；对<, <=向上计数；对>, >=向下计数；循环体：无进/出控制流
+
+要求迭代次数可预测，不支持while、do-while、循环体包含break等
 
 ```c
+// 使用private确保变量为私有，不声明则默认为shared
 #pragma omp parallel private(f) {
     f=7;
     #pragma omp for
     for (i=0; i<20; i++)
         a[i] = b[i] + f * (i+1);
 }
+
+// 或者
+#pragma omp parallel for private(f)
+for (int i = 0; i < 20; i++) {
+    f = 7;
+    a[i] = b[i] + f * (i + 1);
+}
 ```
+
+
 
 ### 数据依赖
 
@@ -491,8 +649,20 @@ for (i=0; i < 100; i++)     {
 - 任何重排转换，只要保持了程序中所有依赖关系， 它就保持了程序的含义
 
 ```c
+// 估算pai的代码示例
+// factor为私有
+double sum = 0.0;
+# pragma omp parallel for num_threads(thread_count) reduction(+:sum) private(factor)
+for (k = 0; k < n; k++) {
+    factor = (k % 2 == 0) ? 1.0 : -1.0;
+    sum += factor/(2*k+1);
+}
+pi_approx = 4.0*sum;
+```
+
+```c
 // Odd-even转置排序示例
-// 避免了频繁的线程创建、销毁开销
+// 在外部创建线程，内部给定任务，避免了频繁的线程创建、销毁开销
 # pragma omp parallel num_threads(thread_count) default(none) shared(a, n) private(i, tmp, phase)
 for (phase = 0; phase < n; phase++) {
     if (phase % 2 == 0)
@@ -534,6 +704,8 @@ sum += f(i);
 
 
 
+
+
 ## MPI编程
 
 *MPI基本原语、阻塞通信、编程模型(对等\主从)、组通信、非阻塞通信原理、混合编程原理*
@@ -557,15 +729,55 @@ int MPI_Send(void* buf, int count, MPI_Datatype datatype, int dest, int tag, MPI
 int MPI_Recv(void* buf, int count, MPI_Datatype datatype, int source, int tag, MPI_Comm comm, MPI_Status *status)
 ```
 
-- comm一般为`MPI_COMM_WORLD`
-- source可以是comm中的编号，或`MPI_ANY_SOURCE`
-- tag为特定标签（需匹配）或`MPI_ANY_TAG`
-- datatype:MPI_INT、MPI_FLOAT、MPI_DOUBLE等
-- status包含`status.MPI_SOURCE(), status.MPI_TAG(), status.MPI_ERROR`
+- comm 一般为`MPI_COMM_WORLD`
+- source 可以是comm中的编号，或`MPI_ANY_SOURCE`
+- tag 为特定标签（需匹配）或`MPI_ANY_TAG`
+- datatype ：`MPI_INT`、`MPI_FLOAT`、`MPI_DOUBLE`等
+- status 包含`status.MPI_SOURCE(), status.MPI_TAG(), status.MPI_ERROR`
+
+使用例：
+
+```c
+#include<mpi.h>
+#include<stdio.h>
+#include<math.h>
+int main(int argc,char *argv[])
+{   
+    int myid, namelen;
+    char message[20];
+    MPI_Status status;
+    char processor_name[MPI_MAX_PROCESSOR_NAME];
+    MPI_Init(&argc,&argv);
+    MPI_Comm_rank(MPI_COMM_WORLD, &myid);
+    MPI_Get_processor_name(processor_name,&namelen);
+    
+    if(myid == 0) {
+        strcpy(message," Hello process 1");
+        printf("process 0 on %s send: %s\n", 
+               processor_name, message);
+        MPI_Send(message, 20, MPI_CHAR, 1, 99,
+                 MPI_COMM_WORLD);
+    }
+    
+    else if (myid == 1) {
+        MPI_Recv(message, 20, MPI_CHAR, 0, 99,
+                 MPI_COMM_WORLD, &status);
+        printf("process 1 on %s received: %s\n", 
+               processor_name, message);
+    }
+    
+    MPI_Finalize();
+    return 0;
+}
+```
+
+
 
 ### 阻塞通信
 
+当一个进程调用阻塞式的发送或接收函数时，它会一直等待直到该操作完成
 
+缓冲区问题可能导致死锁
 
 ### 编程模型
 
@@ -573,8 +785,6 @@ int MPI_Recv(void* buf, int count, MPI_Datatype datatype, int source, int tag, M
 
 - 对等式（地位平等，功能相近）
 - 主从式（地位不同，功能不同）
-
-
 
 ### 组通信
 
@@ -594,7 +804,28 @@ int MPI_Allgather(const void *sendbuf, int sendcount, MPI_Datatype sendtype,void
 int MPI_Reduce_scatter(const void *sendbuf, void *recvbuf, const int recvcounts[],MPI_Datatype datatype, MPI_Op op, MPI_Comm comm);
 ```
 
+对于环/线性阵列：递归加倍法；对于网格/立方阵列：mesh广播算法
 
+### 非阻塞通信
+
+发起通信请求后立即返回，允许程序继续执行其他任务，而不必等待通信完成
+
+调用返回≠通信完成，当一个进程调用 `MPI_Isend()` 或 `MPI_Irecv()` 后，它会立即返回，而实际的数据传输会在后台进行
+
+- `MPI_Isend()`：发起一个非阻塞的发送操作，调用此函数后会立即返回，不会等待消息实际发送完成，调用者可以在消息发送的同时执行其他计算或通信操作
+- `MPI_Irecv()`：发起一个非阻塞的接收操作，也会立即返回，而不等待消息到达，接收缓冲区可以在此期间用于其他目的，直到确认消息已被接收到
+- `MPI_Wait()`：等待指定的非阻塞通信请求完成，如果指定的请求尚未完成，则当前线程会被阻塞，直到该请求完成为止
+
+### 混合编程
+
+ MPI + OpenMP / Pthreads ，节点内使用OpenMP，跨节点使用MPI
+
+四种线程安全级别：
+
+-  MPI_THREAD_SINGLE：应用中只有一个线程
+- MPI_THREAD_FUNNELED：多线程，但只有主线程会进行MPI调用（调用MPI_Init_thread的那个线程）
+- MPI_THREAD_SERIALIZED：多线程，但同时只有一个线程会进行MPI调用
+- MPI_THREAD_MULTIPLE：多线程，且任何线程任何时候都会进行MPI调用（有一些限制避免竞争条件）
 
 
 
@@ -611,6 +842,8 @@ int MPI_Reduce_scatter(const void *sendbuf, void *recvbuf, const int recvcounts[
 SM：Stream Multiprocessor, 流多处理器，SM动态调度warp
 
 Warp是GPU执行程序时的调度单位，同一个Warp里的线程执行相同的指令
+
+
 
 ### 线程结构
 
@@ -653,7 +886,9 @@ Host代码可以：
 
 - 在CPU主存和Device全局内存间传输数据
 
-![cuda_memory](.\img\cuda_memory.png)
+![cuda_memory](./img/cuda_memory.png)
+
+
 
 ### 优化方式
 
