--- a/Parallel/并行复习.md
+++ b/Parallel/并行复习.md
@@ -26,8 +26,9 @@
 **超算**
 
 - 世界第一 Frontier 美国橡树岭国家实验室
-- 中国第一  神威·太湖之光 2016年 无锡
-- 中国第二 天河二哈 2013年 广州
+- 天河三号 2018年 天津
+- 神威·太湖之光 2016年 无锡
+- 天河二号 2013年 广州
 
 **并行计算软件技术面临的挑战**
 
@@ -55,6 +56,8 @@
 写直达与写回（标记为脏）
 
 Cache映射：直接映射、全相连、n路组相连
+
+冯·诺依曼瓶颈：中央处理器（CPU）和主存储器（RAM）之间的数据传输带宽有限，导致的数据传输速率无法满足CPU处理速度需求的问题
 
 
 
@@ -138,7 +141,7 @@ Cache映射：直接映射、全相连、n路组相连
 
 - **加速比 S**  = ==最优==串行算法时间/并行算法时间
 - 并行算法运行于p个处理器，S=p, 则称该并行算法具有线性加速比； S>p (超线性加速比)在实践中是可能出现的
-- **阿姆达尔定律(Amdahl’s law)：**S = 1 / (1 - a + a / p) ，a为串行程序中可被(完美)并行化的比例，极限为 S = 1 / (1 - a)
+- **阿姆达尔定律(Amdahl’s law)：**S = 1 / (1 - a + a / p) ，a为串行程序中可被(完美)并行化的比例，极限为 S = 1 / (1 - a)。除非一个串行程序的执行几乎全部都并行化，否则不论多少可以利用的核，通过并行化所产生的加速比都会是受限的
 - 效率 E = S / p
 - **可扩展性：**增加程序核数(线程数/进程数)，如果在输入规模也以相应增长率增加的情况下，该程序的效率一直是E(不降)，则称该程序是可扩展的。
 
@@ -279,6 +282,12 @@ void trans_mul(int n, float a[][maxN], float b[][maxN], float c[][maxN]){
 
 **SSE 矩阵乘法**：
 
+PD：两个双精度，PS：四个单精度，SS：标量
+
+load 要求数据在内存中的起始地址是16字节（即128位）对齐的
+
+loadu 将16位未对齐的操作数加载到寄存器中
+
 - 使用`__m128 t1, t2, sum;` 定义三个SSE类型的变量，这些变量是用来存储128位宽的数据，可以同时处理四个单精度浮点数（每个32位）。
 - 初始化结果矩阵 `c` 的每个元素为 0.0。
 - 使用 `_mm_setzero_ps()` 初始化一个 `__m128` 类型的向量 `sum`，用于累积乘法结果。
@@ -286,7 +295,7 @@ void trans_mul(int n, float a[][maxN], float b[][maxN], float c[][maxN]){
 - 使用 `_mm_mul_ps()` 对两个向量进行逐元素乘法。
 - 使用 `_mm_add_ps()` 将乘法结果累加到 `sum` 中。
 - 使用 `_mm_hadd_ps()` 进行水平相加，将 4 个元素压缩成一个标量。
-- 使用 `_mm_store_ss()` 将最终结果存储到 `c[i][j]` 中。
+- 使用 `_mm_store_ss()` 将最终结果存储到 `c[i][j]` 中，对齐向量保存单精度浮点数。
 - 处理剩余的 `n % 4` 个元素，这些元素无法用SSE指令一次性处理，因此需要单独处理。
 
 时间复杂度：O(n^3) + 2*O(n^2)。矩阵乘法的时间复杂度仍然是 O(n^3)，而两次转置操作的时间复杂度各为 O(n^2)。
@@ -399,6 +408,7 @@ void pthread_testcancel();// 子线程使用，检测线程是否取消状态，
 - **竞争条件**：执行结果依赖于两个或更多事件的时序
 - **数据依赖**：两个内存操作的序，为了保证结果的正确性，必须保持这个序
 - **同步**：在时间上强制使各执行进程/线程在某一点必须互相等待，确保各进程/线程的正常顺序和对共享可写数据的正确访问
+- **重排转换**：改变语句执行的顺序，不增加或删除任何语句的执行
 
 #### 忙等待
 
@@ -606,6 +616,8 @@ int omp_get_thread_num(void);
 
 ### 归约
 
+支持自定义的规约操作
+
 ```c
 sum = 0; 
 #pragma omp parallel for reduction(+:sum)      
@@ -620,7 +632,7 @@ for (i=0; i < 100; i++)     {
 
 循环变量：带符号整数 ；终止检测：<, <=, >, >=与循环不变量；每步迭代递增/递减一个循环不变量；对<, <=向上计数；对>, >=向下计数；循环体：无进/出控制流
 
-要求迭代次数可预测，不支持while、do-while、循环体包含break等
+==要求迭代次数可预测，不支持while、do-while、循环体包含break等==
 
 ```c
 // 使用private确保变量为私有，不声明则默认为shared
@@ -685,7 +697,7 @@ for (phase = 0; phase < n; phase++) {
 schedule子句确定如何在线程间划分循环
 
 - static([chunk]) 静态划分
-- dynmaic([chunk]) 动态划分
+- dynamic([chunk]) 动态划分，默认chunk为1
 - guided([chunk]) 动态划分，但划分过程中[chunk]指数减小
 
 ```c
@@ -712,6 +724,8 @@ sum += f(i);
 
 ### 基本原语
 
+MPI：消息传递编程模型标准
+
 ```c
 #include <mpi.h>
 
@@ -732,7 +746,7 @@ int MPI_Recv(void* buf, int count, MPI_Datatype datatype, int source, int tag, M
 - comm 一般为`MPI_COMM_WORLD`
 - source 可以是comm中的编号，或`MPI_ANY_SOURCE`
 - tag 为特定标签（需匹配）或`MPI_ANY_TAG`
-- datatype ：`MPI_INT`、`MPI_FLOAT`、`MPI_DOUBLE`等
+- datatype ：`MPI_INT`、`MPI_FLOAT`、`MPI_DOUBLE`等，支持自定义数据类型
 - status 包含`status.MPI_SOURCE(), status.MPI_TAG(), status.MPI_ERROR`
 
 使用例：
@@ -798,10 +812,26 @@ int main(int argc,char *argv[])
 - all-to-all归约：all-to-all广播的逆过程，首先对来自所有进程的数据执行归约操作，然后将归约结果分散给各个进程
 
 ```c
+// 广播，从一个进程向所有其他成员进程发送相同的数据块
 int MPI_Bcast(void *buffer, int count, MPI_Datatype datatype, int root, MPI_Comm comm);
+
+// 归约，对所有进程提供的数据应用二元运算符（如求和、最大值等），并将结果返回给一个指定的根进程
 int MPI_Reduce(const void *sendbuf, void *recvbuf, int count, MPI_Datatype datatype, MPI_Op op, int root, MPI_Comm comm);
+
+// 全收集，每个进程都将自己的数据发送给所有其他进程，这样每个进程最终都会拥有所有进程的数据副本
 int MPI_Allgather(const void *sendbuf, int sendcount, MPI_Datatype sendtype,void *recvbuf, int recvcount, MPI_Datatype recvtype,MPI_Comm comm);
+
+// 全归约,类似于MPI_Reduce，但是归约后的结果会分发给所有进程，而不仅仅是一个根进程
+int MPI_Allreduce (void sendbuf, void recvbuf, int count, MPI_Datatype datatype, MPI_Op op, MPI_Comm comm)
+
+// 每个进程只会收到一部分归约结果，具体来说是将整个归约结果按照某种方式分割后分配给各个进程
 int MPI_Reduce_scatter(const void *sendbuf, void *recvbuf, const int recvcounts[],MPI_Datatype datatype, MPI_Op op, MPI_Comm comm);
+
+// 散射，根进程将不同的数据分发给每个参与进程，每个进程接收到的数据量可以相同也可以不同
+int MPI_Scatter (void sendbuf, int sendcount, MPI_Datatype sendtype, void recvbuf, int recvcount, MPI_Datatype recvtype, int root, MPI_Comm comm)
+
+// 收集，与MPI_Scatter相反，它将各个进程的数据收集到一个根进程中
+int MPI_Gather (void sendbuf, int sendcount, MPI_Datatype sendtype, void recvbuf, int recvcount, MPI_Datatype recvtype, int root, MPI_Comm comm)
 ```
 
 对于环/线性阵列：递归加倍法；对于网格/立方阵列：mesh广播算法
